--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header id="home"> <!-- Image background + titre +fleche -->
-                <div id="bck" class="img-fluid" alt="Responsive image" style="background-image: url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80'); height: 100vh; width: 200vh;">
+                <div id="bck" class="img-fluid" alt="Responsive image" style="background-image: url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80'); height: 100vh;">
                 <h1 class="h1-responsive display-1 text-center text-white">Florian <span class="text-success"><strong>Larguier</strong></span></h1>
                 <a href="#Info"><img id="arw" src="https://www.freeiconspng.com/thumbs/white-arrow-png/white-down-arrow-png-2.png" class="img-fluid"></a></div>
 
